@@ -59,7 +59,7 @@ void UpdateResponse::FixCompactArray(StringVector & compactArray,
     if (compactArray.size() < 2)
     {
         ostringstream message;
-        message << "Unknown compact format: " << context << ": "
+        message << "Unknown COMPACT format: " << context << ": "
                 << Output(compactArray);
         throw RetsException(message.str());
     }
@@ -67,7 +67,7 @@ void UpdateResponse::FixCompactArray(StringVector & compactArray,
     if (!compactArray.front().empty())
     {
         ostringstream message;
-        message << "First element should be empty: " << context << ": "
+        message << "Invalid COMPACT format, missing initial tab: " << context << ": "
                 << Output(compactArray);
         throw RetsException(message.str());
     }
@@ -77,7 +77,7 @@ void UpdateResponse::FixCompactArray(StringVector & compactArray,
     if (!compactArray.back().empty())
     {
         ostringstream message;
-        message << "Last element should be empty: " << context << ": "
+        message << "Invalid COMPACT format, missing final tab: " << context << ": "
                 << Output(compactArray);
         throw RetsException(message.str());
     }
